[FIX] Fix history container width on mobile

--- a/src/app/components/History/styles.module.scss
+++ b/src/app/components/History/styles.module.scss
@@ -1,5 +1,5 @@
 .history_container {
-  width: 100%;
+
   max-width: 45rem;
   margin: 0 auto;
   margin-top: 2rem;
